# International-News

./: .gitignore  .pre-commit-config.yaml  HorizonNews.yaml  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/routes/: articles.py  auth.py  bookmarks.py  regions.py  sources.py  user.py
backend/: .dockerignore  Dockerfile  HorizonNews.yaml  migrate.py  pyproject.toml  requirements.txt  uv.lockbackup
backend/src/: seed.py  seed_trending.py
backend/src/app/: main.py
backend/src/app/api/v1/: routes.py
backend/src/app/core/: auth.py  database.py  settings.py
backend/src/app/models/: __init__.py  article.py  bookmark.py  comment.py  country.py  region.py  topic.py  topic_event.py  user.py
backend/src/app/repository/: article.py  bookmark.py  comment.py  source.py  topic_event.py  user.py
backend/src/app/routes/: articles.py  bookmarks.py  comments.py  topics.py  user.py
backend/src/app/schemas/: article.py  bookmark.py  comment.py  country.py  region.py  source.py  topic.py  topic_event.py  user.py
backend/src/app/services/: article.py  bookmark.py  comment.py  country.py  source.py  topic_event.py  user.py
backend/src/test/: test_articles.py  test_users.py
db/: init.sql
frontend/: Dockerfile  next.config 2.ts  next.config.ts  package 2.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+9 more)
src/app/: main.py
src/test/: conftest.py  test_auth.py  test_countries.py  test_regions.py  test_repository.py
(+77 files in other folders)
